tests/purs/failing/TypeQualification3/Lib2.purs
module Lib2 where

data X
data Y
